	handle "superflat arrays" in Ada.

	* integrate.c (expand_inline_function): Don't inline if would
	lose /u on a BLKmode TARGET.

2003-04-14  Joel Brobecker  <brobecker@gnat.com>

        * dwarf2out.c (gen_compile_unit_die): Emit DW_LANG_Ada95 instead
        of DW_LANG_Ada83 for Ada units.

2003-04-14  Olivier Hainque <hainque@act-europe.fr>

        * fold-const.c (fold): Reorder tests for conditional expressions.

        * expr.c (highest_pow2_factor): Return unsigned.
        * expr.h (offset_address): Likewise.
        * emit-rtl.c (offset_address): POW2 argument now unsigned.
        
2003-04-14  Roger Sayle  <roger@eyesopen.com>

	* builtins.c (expand_builtin_strlen):  Evaluate the lengths of
	string literals at compile-time.

2003-04-14  Roger Sayle  <roger@eyesopen.com>

	* fold-const.c (fold):  Transform (c1 - x) cmp c2, where cmp is a
	comparison operation and c1/c2 are floating point constants into
	x swap(cmp) (c1 - c2).

2003-04-14  Vladimir Makarov  <vmakarov@redhat.com>

	* genautomata.c (output_translate_vect): Fix a typo in loop
	condition.

2003-04-14  Hans-Peter Nilsson  <hp@axis.com>

	PR target/10377
	* config/cris/cris.md ("*mov_sideqi", "*mov_sidehi")
	("*mov_sidesi", "*mov_sideqi_mem", "*mov_sidehi_mem")
	("*mov_sidesi_mem", "*clear_sidesi", "*clear_sidehi")
	("*clear_sideqi", "*ext_sideqihi", "*ext_sideqisi")
	("*ext_sidehisi", "*op_sideqi", "*op_sidehi", "*op_sidesi")
	("*op_swap_sideqi", "*op_swap_sidehi", "*op_swap_sidesi")
	("*extopqihi_side", "*extopqisi_side", "*extophisi_side")
	("*extopqihi_swap_side", "*extopqisi_swap_side")
	("*extophisi_swap_side", 8th, 9th, 10th, 11th, 14th peepholes):
	When next to constraint R, replace constraint i with n.

Mon Apr 14 16:18:37 CEST 2003  Jan Hubicka  <jh@suse.cz>

	PR opt/10024
	* cfgrtl.c (force_nonfallthru_and_redirect): Use unchecked_make_edge.

2003-04-14  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>

	* doc/contrib.texi (Contributors): Correct my entry.
